# LOCAETA_AQ

./: .gitignore  Amine_based_CCS_withoutNH3.ipynb  Incorporate_CCS_to_NEI.py  LOCAETA : Impact of LA CCS on AQ and Public Health.ipynb  LOCAETA.code-workspace  LOCAETA_report.qmd  LOCAETA_report_Electrification.qmd  LOCAETA_report_template.qmd  LOCAETA_special_report.qmd  LOCAETA_special_report_CO_Landfills.html  LOCAETA_special_report_CO_Landfills.qmd  LOCAETA_special_report_egrid.qmd  NEI_csv_to_shapefile.py  README.md  README_old.md  analyze_benmap.py  analyze_inmap.py  ccs_emissions.py  config.yaml  config_old.yaml  datacenter_emissions.py  electrification_emissions.py  generate_report_results.py  inmap_and_satellite_eval.py  inmap_run_comparison.py  nei_emission_processor.py  nei_emissions.py  process_INMAP_for_BenMAP.py  pyproject.toml  render_report.py  run_benmap.py  run_information.xlsx  run_inmap.py  run_python_vmware.sh  run_workflow.py  setup.py
LOCAETA-reports/: _config.yml  _toc.yml  benmap_analysis.ipynb  emission_analysis.ipynb  inmap_analysis.ipynb  intro.md  requirements.txt
LOCAETA_AQ/: analyze_benmap_utils.py  analyze_inmap_utils.py  ccs_emissions_util.py  config_utils.py  datacenter_emissions_util.py  datacenter_emissions_utils.py  electrification_emissions_util.py  electrification_emissions_utils.py  emission_postprocess.py  emission_processing.py  inmap_analysis.py  inmap_to_benmap.py  model_evaluation.py  my_emissions.py  nei_emissions_util.py  nei_emissions_utils.py  report_utils.py  run_benmap_utils.py  run_inmap_utils.py
no_need/: compute_mortality.py
notebooks/: BenMAP_output_analysis_final.ipynb  Compare_INMAP_BenMAP_mortality.ipynb  DataCenter_to_NEI_SMOKE_emissions.ipynb  Electrification_to_NEI_SMOKE_emissions.ipynb  INMAP_output_to_BenMAP.ipynb  INMAP_run_compare.ipynb  USA_CCS_duplicates.ipynb  USA_CCS_emission_processing.ipynb  USA_data_center_analysis.ipynb  USA_data_center_pre_analysis.ipynb  check_emissions.ipynb  (+6 more)
(+37 files in other folders)
