[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LOCAETA_AQ"
version = "0.1.0"
description = "Local Climate and Air Emissions Tracking Atlas (LOCAETA) - Air Quality modeling and analysis toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yunha Lee", email = "yunha.lee@carbonsolutionsllc.com" }
]
keywords = [
    "air-quality",
    "emissions",
    "decarbonization",
    "public-health"
    "environmental-modeling",
    "inmap",
    "benmap",
    "nei"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.10"
dependencies = [
    # Core data processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    
    # Geospatial libraries
    "geopandas>=0.12.0",
    "shapely>=1.8.0",
    "pyproj>=3.3.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "folium>=0.12.0",
    "contextily>=1.2.0",
    "branca>=0.5.0",
    
    # Cartographic tools
    "cartopy>=0.20.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "requests>=2.28.0",
    
    # Report generation
    "great-tables>=0.2.0"
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/yunhal/LOCAETA_AQ"
Repository = "https://github.com/yunhal/LOCAETA_AQ"
Documentation = "https://apps.carbonsolutionsllc.com/locaeta/"
"Bug Tracker" = "https://github.com/yunhal/LOCAETA_AQ/issues"
